# insia-scratch

./: .gitignore  pyproject.toml  requirements.txt
data/: custom_dataset.py  fr_wikipedia.py
insia_scratch/: __init__.py  train.py
insia_scratch/data/: fr_wikipedia.py
insia_scratch/tokenization/: tiktoken.py
models/: gpt_v0.py
models/gpt_v0_ctx1024_ascii/: data.csv
models/gpt_v0_ctx1024_ascii_padding/: data.csv
models/gpt_v0_ctx1024_ascii_truncate/: data.csv
models/gpt_v0_ctx1024_tiktoken_truncate/: data.csv
src/: __init__.py  losses.py  prompting.py  training.py
src/insia_datasets/: french_wikipedia_dataset.py
src/insia_models/: gpt_v0.py
src/insia_tokenizers/: ascii_tokenizer.py  tiktoken_tokenizer.py
tokenization/: tiktoken.py
